--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body {
 
   /*background-image: url("http://cdn.chongminggao.top/background/profile_white.jpg");*/
   background-image: url("https://github.com/SihaoDing/SihaoDing.github.io/blob/main/Resume/profile.jpg");
-  background-image: src="./Resume/profile.jpg" style="width:105px";
+/*   background-image: src="./Resume/profile.jpg" style="width:105px"; */
   background-repeat: no-repeat;
   background-size: 320px;
   background-position: right bottom;
