--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
   width: 960px; 
 
   /*background-image: url("http://cdn.chongminggao.top/background/profile_white.jpg");*/
-  background-image: url("https://github.com/SihaoDing/SihaoDing.github.io/blob/main/Resume/profile.jpeg");
+  background-image: url("https://github.com/SihaoDing/SihaoDing.github.io/blob/main/Resume/profile.jpg");
 /*   background-image: src="./Resume/profile.jpg" style="width:105px"; */
   background-repeat: no-repeat;
   background-size: 100px;
