--- a/style.css
+++ b/style.css
@@ -123,9 +123,7 @@ body {
 
 
 .home-page {
-  /*background-image: url("http://cdn.chongminggao.top/background/photo_1937x1453.jpg");*/
-/*  background-image: url("http://cdn.chongminggao.top/photo/background_shallow.jpg");获奖那栏的背景*/
-  background-image: url("./Resume/profile.jpg");
+  /*background-image: url("http://cdn.chongminggao.top/background/photo_1937x1453.jpg");  获奖信息那栏的图片*/
   background-position: 0px -60px; 
   background-size: cover;
   height: 450px;
