--- a/style.css
+++ b/style.css
@@ -75,7 +75,8 @@ body {
 
   background-image: url("https://raw.githubusercontent.com/SihaoDing/SihaoDing.github.io/main/Resume/profile.jpeg");
   background-repeat: no-repeat;
-  background-size: 740px;
+/*   background-size: 740px; */
+  background-size: 10000000px;
   background-position: left up;
 
 }
