--- a/style.css
+++ b/style.css
@@ -112,10 +112,12 @@ body {
   .basic-info p, .basic-info span {
     font-family: 'Vollkorn', serif;
     font-style: italic;
-    margin: 0px; }
+    margin: 0px;
+    font-size: 1.1em }
     .basic-info p B, .basic-info span B {
       font-style: normal;
-      font-family: Helvetica; }
+      font-family: Helvetica;
+      font-size: 1.4em }
 
 .envelope:before {
   content: "\e605"; }
@@ -181,7 +183,8 @@ h1 span {
 .resume {
     position: absolute;
     right: 40px;
-    bottom: -30px;
+/*     bottom: -30px; */
+    bottom: 0px
     color: #555;
     font-family: 'Vollkorn', serif;
     /*font-style: italic;*/
