--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ h1 span {
     position: absolute;
     right: 40px;
 /*     bottom: -30px; */
-    bottom: 0px
+    bottom: 0px;
     color: #555;
     font-family: 'Vollkorn', serif;
     /*font-style: italic;*/
