--- a/style.css
+++ b/style.css
@@ -183,7 +183,8 @@ h1 span {
 .resume {
     position: absolute;
     right: 40px;
-/*     bottom: -30px; */
+/*    bottom: -30px;*/
+    bottom: 0px;
     color: #555;
     font-family: 'Vollkorn', serif;
     /*font-style: italic;*/
